ocean: rootdir: Update nfc hal service naming
 * This was modified in upstream, to keep the override working
   we need to match that

Change-Id: If297064d2fe364c8a60b24a0070ae305db0b342e

--- a/rootdir/etc/init.ocean.rc
+++ b/rootdir/etc/init.ocean.rc
@@ -32,7 +32,7 @@ on early-init && property:ro.boot.hardware.sku=XT1955-7
     setprop ro.vendor.telephony.default_network "10,10"
 
 on boot && property:ro.boot.product.hardware.sku=nfc
-    start nfc_hal_service
+    start vendor.st_nfc_hal_service
 
 on property:ro.boot.hardware.sku=XT1955-1
     setprop ro.radio.imei.sv 33
@@ -62,7 +62,7 @@ on property:ro.boot.hardware.sku=XT1955-6
     setprop persist.radio.plmn_name_cmp 1
     setprop persist.vendor.radio.customer_mbns "vzw_usa.mbn;super.mbn;vzw_visible.mbn"
 
-service nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service.st
+service vendor.st_nfc_hal_service /vendor/bin/hw/android.hardware.nfc@1.2-service.st
     interface android.hardware.nfc@1.0::INfc default
     interface android.hardware.nfc@1.1::INfc default
     interface android.hardware.nfc@1.2::INfc default
